--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -321,6 +321,8 @@ source "net/Kconfig"
 
 source "drivers/Kconfig"
 
+source "drivers/firmware/Kconfig"
+
 source "fs/Kconfig"
 
 source "arch/arm64/kvm/Kconfig"
